--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "antd": "^5.24.8",
+    "axios": "^1.8.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-qr-code": "^2.0.15",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
