start aws testing

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,4 @@
-# frontend/.env.production
-REACT_APP_SOCKET_URL=http://你的 EC2 公网 IP:3000
+REACT_APP_SOCKET_URL=https://your.domain.com
+REACT_APP_COGNITO_REGION=us-east-1
+REACT_APP_COGNITO_USER_POOL_ID=us-east-1_AbCd1234
+REACT_APP_COGNITO_APP_CLIENT_ID=abcdefghijk1234567890
