--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_SOCKET_URL=https://your.domain.com
+REACT_APP_SOCKET_URL=http://localhost:3000
 REACT_APP_COGNITO_REGION=us-east-1
 REACT_APP_COGNITO_USER_POOL_ID=us-east-1_1tOIjHjWx
 REACT_APP_COGNITO_APP_CLIENT_ID=5hu6tf244524rdld72j9ll9ath
