--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "amazon-cognito-identity-js": "^6.3.15",
     "antd": "^5.24.8",
     "aws-amplify": "^6.14.3",
     "react": "^19.1.0",
